2004-01-12  Rodney Dawes  <dobey@ximian.com>

	* Makefile.am: Add install hook to create data directory

2004-01-12  Rodney Dawes  <dobey@ximian.com>

	* Makefile.am: Update for new capplet
	* background.desktop.in: Update Name/Comment/Exec entries
	* gnome-wp-capplet.[ch]:
	* gnome-wp-info.[ch]:
	* gnome-wp-item.[ch]:
	* gnome-wp-utils.[ch]:
	* gnome-wp-xml.[ch]: Add new capplet code to CVS

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

Fri Nov 21 09:42:19 2003  Jonathan Blandford  <jrb@gnome.org>

	* background-properties.glade: Remove translatable radiobutton
	strings, #119288

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

2003-08-01  Dennis Cranston  <dennis_cranston at yahoo com>

	* background-properties-capplet.c, background-properties.glade: 
	Patch to fix spacing between action area and vbox of preferences 
	dialog.
	
2003-07-17  Dennis Cranston <dennis_cranston at yahoo com>

	* background-properties.glade, 
	  background-properties-capplet.c:  Fixes for ui-review
	  bug report #98916 and duplicate mnemonic fixes.
	  
2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

2002-11-13  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>

	* background-properties-capplet.c (drag_data_received_cb):
	Reset Picture option to "Wall paper" only in the case of 
	"none" while DnD. Fixes #94329
